--- a/front/styles.css
+++ b/front/styles.css
@@ -1,3 +1,11 @@
+:root {
+  margin: 0;
+}
+
+body {
+  background-color: #F3F3F3;
+}
+
 header {
   text-align: center;
 }
@@ -21,6 +29,14 @@ main {
           flex-direction: column;
 }
 
+.information__categories h2 {
+  margin: 10px 0;
+}
+
+.information__categories .category h3 {
+  margin: 0;
+}
+
 .information__categories .category .info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -28,6 +44,34 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.information__categories .category .logo figure img {
+  width: 30px;
+}
+
+.information__categories .category h5 {
+  margin: 0;
+}
+
+.content .questions {
+  background-color: #fff;
+}
+
+.content .questions__data .data-name {
+  margin: 0;
+}
+
+.content .questions__data .data-category {
+  margin: 0;
+}
+
+.content .questions__data .data-date {
+  margin: 0;
+}
+
+.content .questions__question {
+  margin: 0 0 20px 0;
 }
 
 .content .questions__data {
@@ -42,6 +86,10 @@ main {
           justify-content: space-between;
 }
 
+.content .answers {
+  background-color: #fff;
+}
+
 .content .answers__data {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -52,5 +100,17 @@ main {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+}
+
+.content .answers__data .data-name {
+  margin: 0;
+}
+
+.content .answers__data .data-date {
+  margin: 0;
+}
+
+.content .answers__answer {
+  margin: 0 0 20px 0;
 }
 /*# sourceMappingURL=styles.css.map */
