--- a/front/styles.css
+++ b/front/styles.css
@@ -113,4 +113,14 @@ main {
 .content .answers__answer {
   margin: 0 0 20px 0;
 }
+
+.content .form__answers form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
 /*# sourceMappingURL=styles.css.map */
