--- a/front/styles.css
+++ b/front/styles.css
@@ -1,6 +1,7 @@
 :root {
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -57,6 +58,29 @@ main {
   margin: 50px 0;
 }
 
+.title__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  margin: 20px 0;
+  font-size: 20px;
+}
+
+.title__section::before {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background: #30A96F;
+  display: block;
+  margin: 5px;
+}
+
 .question form {
   background: #172B4D;
   padding: 20px;
@@ -102,12 +126,6 @@ main {
 
 .question form ::placeholder {
   color: gainsboro;
-}
-
-.question form label {
-  color: gainsboro;
-  font-size: 13px;
-  padding: 10px;
 }
 
 .question form textarea {
@@ -168,26 +186,9 @@ main {
   transition: 1s;
 }
 
-.information__categories h2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  margin: 20px 0;
-}
-
-.information__categories h2::before {
-  content: "";
-  width: 20px;
-  height: 2px;
-  background: #30A96F;
-  display: block;
-  margin: 5px;
+.information__categories {
+  max-width: 300px;
+  width: 100%;
 }
 
 .information__categories .category {
@@ -234,7 +235,13 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   font-weight: lighter;
+}
+
+.information__categories .category .logo figure {
+  margin: 5px 30px;
 }
 
 .information__categories .category .logo figure img {
@@ -491,5 +498,59 @@ main {
   margin: 20px auto;
   width: 50%;
   text-align: center;
+}
+
+.hide {
+  display: none;
+}
+
+@media screen and (max-width: 1280px) {
+  .title__section {
+    font-size: 15px;
+  }
+  .question form {
+    max-width: 200px;
+    width: 100%;
+  }
+  .content {
+    max-width: 400px;
+    width: 100%;
+  }
+  .information__categories {
+    max-width: 200px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main .content {
+    max-width: 600px;
+    width: 100%;
+  }
+  .information__last .info a {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  header h3 {
+    line-height: 20px;
+  }
+  .content {
+    margin: 0 20px;
+  }
+  .content .questions__data {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
