--- a/front/styles.scss
+++ b/front/styles.scss
@@ -1,6 +1,7 @@
 :root{
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -42,6 +43,22 @@ main{
     margin: 50px 0;
 }
 
+.title__section{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin: 20px 0;
+    font-size: 20px;
+    &::before{
+        content: "";
+        width: 20px;
+        height: 2px;
+        background: #30A96F;
+        display: block;
+        margin: 5px;
+    }
+}
+
 .question{
     & form{
         background: #172B4D;
@@ -66,11 +83,6 @@ main{
         }
         & ::placeholder{
             color: gainsboro;
-        }
-        & label{
-            color: gainsboro;
-            font-size: 13px;
-            padding: 10px;
         }
         & textarea{
             width: 100%;
@@ -113,20 +125,8 @@ main{
 
 .information{
     &__categories{
-        & h2{
-            display: flex;
-            align-items: center;
-            justify-content: start;
-            margin: 20px 0;
-            &::before{
-                content: "";
-                width: 20px;
-                height: 2px;
-                background: #30A96F;
-                display: block;
-                margin: 5px;
-            }
-        }
+        max-width: 300px;
+        width: 100%;
         & .category{
             margin: 5px 0;
             &::after{
@@ -159,10 +159,12 @@ main{
             & .info{
                 display: flex;
                 align-items: center;
+                justify-content: space-around;
                 font-weight: lighter;
             }
             & .logo{
                 & figure{
+                    margin: 5px 30px;
                     & img{
                         width: 30px;
                         background: gainsboro;
@@ -363,5 +365,63 @@ main{
         margin: 20px auto;
         width: 50%;
         text-align: center;
+    }
+}
+
+.hide{
+    display: none;
+}
+
+@media screen and (max-width: 1280px){
+    .title__section{
+        font-size: 15px;
+    }
+    .question{
+        & form{
+            max-width: 200px;
+            width: 100%;
+        }
+    }
+
+    .content{
+        max-width: 400px;
+        width: 100%;
+    }
+
+    .information__categories{
+        max-width: 200px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1000px){
+    main{
+        flex-direction: column;
+        align-items: center;
+        & .content{
+            max-width: 600px;
+            width: 100%;
+        }
+    }
+    .information__last{
+        & .info{
+            & a{
+                display: block;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    header{
+        & h3{
+            line-height: 20px;
+        }
+    }
+    .content{
+        margin: 0 20px;
+        & .questions__data{
+            flex-wrap: wrap;
+        }
     }
 }
