--- a/front/views/legal.html
+++ b/front/views/legal.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/styles.css">
-        <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-        <title>Pregunta Repo</title>
+        <title>Legal | Pregunta Repo</title>
     </head>
     <body>
         <header>
             <div class="header__title">
                 <h1>Pregunta Repo</h1>
                 <figure>
-                    <img src="./images/question.png" alt="logo de pregunta">
+                    <img src="../images/question.png" alt="logo de pregunta">
                 </figure>
             </div>
             <h2>Preguntas y respuestas para todos</h2>
@@ -46,7 +46,7 @@
             </section>
             <section class="content" id="content">
                 <h2 class="title__section">
-                    FEED | GENERAL
+                    FEED | CATEGORÍA LEGAL
                 </h2>
             </section>
             <section class="information">
@@ -57,7 +57,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="y">Técnica</a>
+                                <a href="/front/views/tecnica.html" class="y">Técnica</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -67,7 +67,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/screwdriver.png" alt="logo de categoria Técnica">
+                                    <img src="../images/screwdriver.png" alt="logo de categoria Técnica">
                                 </figure>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/legal-paper.png" alt="logo de categoria Legal">
+                                    <img src="../images/legal-paper.png" alt="logo de categoria Legal">
                                 </figure>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/administrator.png" alt="logo de categoria Administrativa">
+                                    <img src="../images/administrator.png" alt="logo de categoria Administrativa">
                                 </figure>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/dollar.png" alt="logo de categoria Económica">
+                                    <img src="../images/dollar.png" alt="logo de categoria Económica">
                                 </figure>
                             </div>
                         </div>
@@ -138,6 +138,6 @@
                 </div>
             </section>
         </main>
-        <script src="./logic/index.js"></script>
+        <script src="../logic/legal.js"></script>
     </body>
 </html>
