--- a/front/styles/styles.css
+++ b/front/styles/styles.css
@@ -12,8 +12,8 @@ body {
 header {
   font-weight: 300;
   background-color: #0948B3;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(209, 35, 35, 0.3)), to(transparent)), url("./images/action.png");
-  background-image: linear-gradient(to top, rgba(209, 35, 35, 0.3), transparent), url("./images/action.png");
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(209, 35, 35, 0.3)), to(transparent)), url("../images/action.png");
+  background-image: linear-gradient(to top, rgba(209, 35, 35, 0.3), transparent), url("../images/action.png");
   -webkit-box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.62);
           box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.62);
   text-align: left;
@@ -551,6 +551,14 @@ main {
   .content .questions__data {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+  }
+  .content .questions__data .data-date::after {
+    content: "";
+    width: 30px;
+    height: 2px;
+    background: #e441b9;
+    display: block;
+    margin: 5px 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
