--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -61,7 +61,25 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="/front/views/tecnica.html" class="y">Técnica</a>
+                                <a href="./front/" class="">Todas</a>
+                            </h3>
+                        </div>
+                        <div class="info">
+                            <h5>
+                                <span id="todas"></span>
+                                preguntas
+                            </h5>
+                            <div class="logo">
+                                <figure>
+                                    <img src="./images/expand.png" alt="logo de categoria Todos">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="title">
+                            <h3>
+                                <a href="./views/tecnica.html" class="y">Técnica</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -71,7 +89,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="../images/screwdriver.png" alt="logo de categoria Técnica">
+                                    <img src="./images/screwdriver.png" alt="logo de categoria Técnica">
                                 </figure>
                             </div>
                         </div>
@@ -79,7 +97,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="p">Legal</a>
+                                <a href="./views/legal.html" class="p">Legal</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -89,7 +107,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="../images/legal-paper.png" alt="logo de categoria Legal">
+                                    <img src="./images/legal-paper.png" alt="logo de categoria Legal">
                                 </figure>
                             </div>
                         </div>
@@ -97,7 +115,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="g">Administrativa</a>
+                                <a href="./views/admin.html" class="g">Administrativa</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -107,7 +125,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="../images/administrator.png" alt="logo de categoria Administrativa">
+                                    <img src="./images/administrator.png" alt="logo de categoria Administrativa">
                                 </figure>
                             </div>
                         </div>
@@ -115,7 +133,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="r">Económica</a>
+                                <a href="./views/econo.html" class="r">Económica</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -125,7 +143,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="../images/dollar.png" alt="logo de categoria Económica">
+                                    <img src="./images/dollar.png" alt="logo de categoria Económica">
                                 </figure>
                             </div>
                         </div>
