--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -61,7 +61,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="./front/" class="">Todas</a>
+                                <a href="../index.html" class="">Todas</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -71,7 +71,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/expand.png" alt="logo de categoria Todos">
+                                    <img src="../images/expand.png" alt="logo de categoria Todos">
                                 </figure>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="./views/tecnica.html" class="y">Técnica</a>
+                                <a href="./tecnica.html" class="y">Técnica</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -89,7 +89,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/screwdriver.png" alt="logo de categoria Técnica">
+                                    <img src="../images/screwdriver.png" alt="logo de categoria Técnica">
                                 </figure>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="./views/legal.html" class="p">Legal</a>
+                                <a href="./legal.html" class="p">Legal</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -107,7 +107,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/legal-paper.png" alt="logo de categoria Legal">
+                                    <img src="../images/legal-paper.png" alt="logo de categoria Legal">
                                 </figure>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="./views/admin.html" class="g">Administrativa</a>
+                                <a href="./admin.html" class="g">Administrativa</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -125,7 +125,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/administrator.png" alt="logo de categoria Administrativa">
+                                    <img src="../images/administrator.png" alt="logo de categoria Administrativa">
                                 </figure>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="./views/econo.html" class="r">Económica</a>
+                                <a href="./econo.html" class="r">Económica</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -143,7 +143,7 @@
                             </h5>
                             <div class="logo">
                                 <figure>
-                                    <img src="./images/dollar.png" alt="logo de categoria Económica">
+                                    <img src="../images/dollar.png" alt="logo de categoria Económica">
                                 </figure>
                             </div>
                         </div>
