--- a/front/styles/styles.css
+++ b/front/styles/styles.css
@@ -9,6 +9,36 @@ body {
   margin: 0;
 }
 
+.loading {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.3);
+  overflow: hidden;
+}
+
+.spin {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #3498db;
+  width: 50px;
+  height: 50px;
+  animation: spinner 1s linear infinite;
+  background: transparent;
+}
+
+@keyframes spinner {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
 header {
   font-weight: 300;
   background-color: #0948B3;
