--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -15,6 +15,11 @@
         <title>Admnistrativa | Pregunta Repo</title>
     </head>
     <body>
+        <div class="" id="loading">
+            <div class="loading">
+                <div class="spin"></div>
+            </div>
+        </div>
         <header>
             <div class="header__title">
                 <h1>Pregunta Repo</h1>
